# Macgyver

ESF/: CMakeLists.txt  CMakeLists.txt~  esf.cpp
Final_ML/: NN_SHOTC.joblib  check_model_single.py  neural_networks.py  nn_function.py
SHOTA/: CMakeLists.txt  CMakeLists.txt~  shotA.cpp
SHOTC/: CMakeLists.txt  shotC.cpp
Vectors_Intersection/: CMakeLists.txt  CMakeLists.txt~  segmenter.cpp~  vector_intersection.cpp
kd_tree/: CMakeCache.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  kdtree_search  kdtree_search.cpp
